Documentation for binary operations

--- a/docs/tutorial.ipynb
+++ b/docs/tutorial.ipynb
@@ -14,6 +14,7 @@
     "  - [Converting PyMathML expressions to MathML](#Converting-PyMathML-expressions-to-MathML)\n",
     "  - [Mathematical operations](#Mathematical-operations)\n",
     "    - [Unary operations](#Unary-operations)\n",
+    "    - [Binary operations](#Binary-operations)\n",
     "\n",
     "# Introduction\n",
     "\n",
@@ -753,7 +754,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "which is equivalent to the '+' and '-' unary operators"
+    "which are equivalent to the '+' and '-' unary operators"
    ]
   },
   {
@@ -792,10 +793,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<mrow><mo>¬</mo><mi>a</mi></mrow>\n",
-      "\n",
-      "-------------------------------------------------------------------------------\n",
-      "\n",
+      "<mrow><mo>¬</mo><mi>a</mi></mrow>\n"
+     ]
+    }
+   ],
+   "source": [
+    "Not = unary_operation_type('Not', '\\N{NOT SIGN}')\n",
+    "print(Not(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "PyMathML representation of the ``¬`` unary operation.\n",
       "\n",
       "Usage: ``Not(operand, **attributes)``\n",
@@ -810,10 +825,208 @@
     }
    ],
    "source": [
-    "Not = unary_operation_type('Not', '\\N{NOT SIGN}')\n",
-    "print(Not(a))\n",
-    "print('\\n'+(79*'-')+'\\n')\n",
     "print(inspect.getdoc(Not))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Binary operations\n",
+    "\n",
+    "Binary operations are derived from the ``BinaryOperation`` class. Currently\n",
+    "implemented binary operations are listed below.\n",
+    "\n",
+    "| PyMathML       | Operator |\n",
+    "|----------------|----------|\n",
+    "| Dot            | ⋅        |\n",
+    "| Equals         | =        |\n",
+    "| InvisibleTimes | ⁢         |\n",
+    "| Minus          | -        |\n",
+    "| Plus           | +        |\n",
+    "| Times          | ×        |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The operands are passed to the initializer of the binary operation to be\n",
+    "constructed. They are embedded in a ``mrow`` element."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<mrow><mi>a</mi><mo>-</mo><mi>b</mi></mrow>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b = identifiers('a', 'b')\n",
+    "print(Minus(a, b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "which is equivalent to ``a-b``:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<mrow><mi>a</mi><mo>-</mo><mi>b</mi></mrow>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a-b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that the initializer also accepts attributes, which are passed to the\n",
+    "``mrow`` element:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<mrow dir=\"rtl\"><mi>a</mi><mo>-</mo><mi>b</mi></mrow>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Minus(a, b, dir='rtl'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Also, assuming associativity, more than two operands can be passed to the\n",
+    "initializer:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<mrow><mi>a</mi><mo>-</mo><mi>b</mi><mo>-</mo><mi>c</mi></mrow>\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = Identifier('c')\n",
+    "print(Minus(a, b, c))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "which is not strictly equivalent to ``a-b-c`` (the former being embedded in one\n",
+    "single ``mrow`` element):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<mrow><mrow><mi>a</mi><mo>-</mo><mi>b</mi></mrow><mo>-</mo><mi>c</mi></mrow>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a-b-c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "New binary operations can be created with the ``binary_operation_type``\n",
+    "function, like so:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<mrow><mi>a</mi><mo>⊗</mo><mi>b</mi><mo>⊗</mo><mi>c</mi></mrow>\n"
+     ]
+    }
+   ],
+   "source": [
+    "CircledTimes = binary_operation_type('CircledTimes', '\\N{CIRCLED TIMES}')\n",
+    "print(CircledTimes(a, b, c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyMathML representation of the ``⊗`` binary operation.\n",
+      "\n",
+      "Usage: ``CircledTimes(*operands, **attributes)``\n",
+      "\n",
+      "which produces the following MathML code (associativity is assumed)\n",
+      "\n",
+      "    <mrow>\n",
+      "        operands[0]\n",
+      "        <mo>⊗</mo>\n",
+      "        operands[1]\n",
+      "        <mo>⊗</mo>\n",
+      "        operands[2]\n",
+      "        ...\n",
+      "    </mrow>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(inspect.getdoc(CircledTimes))"
    ]
   }
  ],
