Additions to the documentation of unary operations

--- a/docs/tutorial.ipynb
+++ b/docs/tutorial.ipynb
@@ -729,7 +729,8 @@
     "## Unary operations\n",
     "\n",
     "Unary operations are derived from the ``UnaryOperation`` class. Examples are\n",
-    "the ``Pos`` and ``Neg`` classes"
+    "the ``Pos`` and ``Neg`` classes. The single operand is embedded in a ``mrow``\n",
+    "element:"
    ]
   },
   {
@@ -747,14 +748,15 @@
     }
    ],
    "source": [
-    "print('{}\\n{}'.format(Pos('a'), Neg('a')))"
+    "a = Identifier('a')\n",
+    "print('{}\\n{}'.format(Pos(a), Neg(a)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "which are equivalent to the '+' and '-' unary operators"
+    "The above constructs are equivalent to the ``+a`` and ``-a``, respectively:"
    ]
   },
   {
@@ -772,7 +774,6 @@
     }
    ],
    "source": [
-    "a = Identifier('a')\n",
     "print('{}\\n{}'.format(+a, -a))"
    ]
   },
@@ -780,13 +781,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "New unary operations can be created with the ``unary_operation_type`` function.\n",
-    "For example"
+    "Note that the initializer also accepts attributes, which are passed to the\n",
+    "``mrow`` element:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<mrow dir=\"rtl\"><mo>-</mo><mi>a</mi></mrow>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Neg(a, dir='rtl'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "New unary operations can be created with the ``unary_operation_type`` function,\n",
+    "like so:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -907,8 +935,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 31,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -932,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
