Documentation for n-ary operations

--- a/docs/tutorial.ipynb
+++ b/docs/tutorial.ipynb
@@ -15,6 +15,7 @@
     "  - [Mathematical operations](#Mathematical-operations)\n",
     "    - [Unary operations](#Unary-operations)\n",
     "    - [Binary operations](#Binary-operations)\n",
+    "    - [N-ary operations](#N-ary-operations)\n",
     "\n",
     "# Introduction\n",
     "\n",
@@ -1057,6 +1058,233 @@
    ],
    "source": [
     "print(inspect.getdoc(CircledTimes))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## N-ary operations\n",
+    "\n",
+    "N-ary operations are derived from the ``NaryOperation`` class. Currently\n",
+    "implemented N-ary operations are listed below.\n",
+    "\n",
+    "| PyMathML       | Operator |\n",
+    "|----------------|----------|\n",
+    "| Product        | ∏        |\n",
+    "| Sum            | ∑        |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Three expressions are passed to the initializer of the n-ary operation: the\n",
+    "operand, the ``start`` expression and the ``end`` expression:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<mrow><munderover><mo>∑</mo><mrow><mi>i</mi><mo>=</mo><mn>0</mn></mrow><mi>n</mi></munderover><msub><mi>a</mi><mi>i</mi></msub></mrow>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, i, n = identifiers('a', 'i', 'n')\n",
+    "operand = a[i]\n",
+    "start = Equals(i, 0)\n",
+    "end = n\n",
+    "expr = Sum(operand, start, end)\n",
+    "print(expr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<math display=\"block\" xmlns=\"http://www.w3.org/1998/Math/MathML\"><mrow><munderover><mo>∑</mo><mrow><mi>i</mi><mo>=</mo><mn>0</mn></mrow><mi>n</mi></munderover><msub><mi>a</mi><mi>i</mi></msub></mrow></math>"
+      ],
+      "text/plain": [
+       "Sum(Sub(Identifier('a'), Identifier('i')), Equals(Identifier('i'), Number(0)), Identifier('n'))"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that, if empty, ``start`` and ``end`` must explicitly be set to ``None``"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<math display=\"block\" xmlns=\"http://www.w3.org/1998/Math/MathML\"><mrow><munder><mo>∑</mo><mrow><mi>i</mi><mo>=</mo><mn>0</mn></mrow></munder><msub><mi>a</mi><mi>i</mi></msub></mrow></math>"
+      ],
+      "text/plain": [
+       "Sum(Sub(Identifier('a'), Identifier('i')), Equals(Identifier('i'), Number(0)), None)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Sum(operand, start, None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<math display=\"block\" xmlns=\"http://www.w3.org/1998/Math/MathML\"><mrow><mover><mo>∑</mo><mi>n</mi></mover><msub><mi>a</mi><mi>i</mi></msub></mrow></math>"
+      ],
+      "text/plain": [
+       "Sum(Sub(Identifier('a'), Identifier('i')), None, Identifier('n'))"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Sum(operand, None, end)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Also note that the initializer accepts attributes, which are passed to the\n",
+    "``mrow`` element:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<mrow dir=\"rtl\"><mo>∑</mo><msub><mi>a</mi><mi>i</mi></msub></mrow>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Sum(operand, None, None, dir='rtl'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "New n-ary operations can be created with the ``nary_operation_type`` function,\n",
+    "like so:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<mrow><mo>⋃</mo><msub><mi>a</mi><mi>i</mi></msub></mrow>\n"
+     ]
+    }
+   ],
+   "source": [
+    "Union = nary_operation_type('Union', '\\N{N-ARY UNION}')\n",
+    "print(Union(operand, None, None))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyMathML representation of the ``⋃`` n-ary operation.\n",
+      "\n",
+      "Usage: ``Union(operand, start, end, **attributes)``\n",
+      "\n",
+      "If both ``start`` and ``end`` are not ``None``, the following MathML\n",
+      "code is produced\n",
+      "\n",
+      "    <mrow>\n",
+      "        <munderover>\n",
+      "            <mo>⋃</mo>\n",
+      "            start\n",
+      "            end\n",
+      "        </munderover>\n",
+      "        operand\n",
+      "    </mrow>\n",
+      "\n",
+      "If only ``start`` is not ``None``, the following MathML code is\n",
+      "produced\n",
+      "\n",
+      "    <mrow>\n",
+      "        <munder>\n",
+      "            <mo>⋃</mo>\n",
+      "            start\n",
+      "        </munder>\n",
+      "        operand\n",
+      "    </mrow>\n",
+      "\n",
+      "Finally, if only ``end`` is not ``None``, the following MathML code\n",
+      "is produced\n",
+      "\n",
+      "    <mrow>\n",
+      "        <mover>\n",
+      "            <mo>⋃</mo>\n",
+      "            end\n",
+      "        </mover>\n",
+      "        operand\n",
+      "    </mrow>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(inspect.getdoc(Union))"
    ]
   }
  ],
