--- a/docs/tutorial.ipynb
+++ b/docs/tutorial.ipynb
@@ -840,11 +840,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PyMathML representation of the ``¬`` unary operation.\n",
+      "PyMathML representation of the ¬ unary operation.\n",
       "\n",
-      "Usage: ``Not(operand, **attributes)``\n",
+      "Usage: Not(operand, **attributes)\n",
       "\n",
-      "which produces the following MathML code\n",
+      "which produces the following MathML code:\n",
       "\n",
       "    <mrow>\n",
       "        <mo>¬</mo>\n",
@@ -1039,11 +1039,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PyMathML representation of the ``⊗`` binary operation.\n",
+      "PyMathML representation of the ⊗ binary operation.\n",
       "\n",
-      "Usage: ``CircledTimes(*operands, **attributes)``\n",
+      "Usage: CircledTimes(*operands, **attributes)\n",
       "\n",
-      "which produces the following MathML code (associativity is assumed)\n",
+      "which produces the following MathML code (associativity is assumed):\n",
       "\n",
       "    <mrow>\n",
       "        operands[0]\n",
@@ -1243,12 +1243,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PyMathML representation of the ``⋃`` n-ary operation.\n",
+      "PyMathML representation of the ⋃ n-ary operation.\n",
       "\n",
-      "Usage: ``Union(operand, start, end, **attributes)``\n",
+      "Usage: Union(operand, start, end, **attributes)\n",
       "\n",
-      "If both ``start`` and ``end`` are not ``None``, the following MathML\n",
-      "code is produced\n",
+      "If both start and end are not None, the following MathML code is\n",
+      "produced:\n",
       "\n",
       "    <mrow>\n",
       "        <munderover>\n",
@@ -1259,8 +1259,7 @@
       "        operand\n",
       "    </mrow>\n",
       "\n",
-      "If only ``start`` is not ``None``, the following MathML code is\n",
-      "produced\n",
+      "If only start is not None, the following MathML code is produced:\n",
       "\n",
       "    <mrow>\n",
       "        <munder>\n",
@@ -1270,8 +1269,8 @@
       "        operand\n",
       "    </mrow>\n",
       "\n",
-      "Finally, if only ``end`` is not ``None``, the following MathML code\n",
-      "is produced\n",
+      "Finally, if only end is not None, the following MathML code is\n",
+      "produced:\n",
       "\n",
       "    <mrow>\n",
       "        <mover>\n",
