Broken links (now work in markdown, not in Jupyter Notebook)

--- a/docs/README.ipynb
+++ b/docs/README.ipynb
@@ -76,15 +76,15 @@
     "\n",
     "The remainder of this page is a tutorial. It is organized as follows:\n",
     "  \n",
-    "  - [Converting PyMathML expressions to MathML](#Converting-PyMathML-expressions-to-MathML)\n",
-    "  - [Basic MathML elements](#Basic-MathML-elements)\n",
-    "    - [Token elements](#Token-elements)\n",
-    "    - [Non-token elements](#Non-token-elements)\n",
-    "  - [Building complex expressions with special methods](#Building-complex-expressions-with-special-methods)\n",
-    "  - [Mathematical operations](#Mathematical-operations)\n",
-    "    - [Unary operations](#Unary-operations)\n",
-    "    - [Binary operations](#Binary-operations)\n",
-    "    - [N-ary operations](#N-ary-operations)\n",
+    "  - [Converting PyMathML expressions to MathML](#converting-pymathml-expressions-to-mathml)\n",
+    "  - [Basic MathML elements](#basic-mathml-elements)\n",
+    "    - [Token elements](#token-elements)\n",
+    "    - [Non-token elements](#non-token-elements)\n",
+    "  - [Building complex expressions with special methods](#building-complex-expressions-with-special-methods)\n",
+    "  - [Mathematical operations](#mathematical-operations)\n",
+    "    - [Unary operations](#unary-operations)\n",
+    "    - [Binary operations](#binary-operations)\n",
+    "    - [N-ary operations](#n-ary-operations)\n",
     "    \n",
     "This ``README.md`` is the Markdown export of a Jupyter Notebook which can be\n",
     "found in the ``docs/`` directory of this repository."
@@ -564,7 +564,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "f, x = identifiers('f', 'x')\n",
@@ -712,7 +714,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "expr = Fenced(a+b)**2"
