Documentation of module pymathml.utils

--- a/docs/README.ipynb
+++ b/docs/README.ipynb
@@ -85,6 +85,7 @@
     "    - [Unary operations](#unary-operations)\n",
     "    - [Binary operations](#binary-operations)\n",
     "    - [N-ary operations](#n-ary-operations)\n",
+    "  - [Convenience functions](#convenience-functions)\n",
     "    \n",
     "This ``README.md`` is the Markdown export of a Jupyter Notebook which can be\n",
     "found in the ``docs/`` directory of this repository."
@@ -1307,6 +1308,64 @@
    ],
    "source": [
     "print(inspect.getdoc(Union))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convenience functions\n",
+    "\n",
+    "Convenience functions can be found in the ``pymathml.utils``. See docstrings\n",
+    "for more details."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on module pymathml.utils in pymathml:\n",
+      "\n",
+      "NAME\n",
+      "    pymathml.utils - A collection of functions to facilitate creation of expressions.\n",
+      "\n",
+      "FUNCTIONS\n",
+      "    identifiers(*names, **attributes)\n",
+      "        Return instances of Identifier with specified names.\n",
+      "        \n",
+      "        The **attributes are passed to the initializer of all returned\n",
+      "        instances of Identifier.\n",
+      "    \n",
+      "    table(cells, **attributes)\n",
+      "        Create a Table.\n",
+      "        \n",
+      "        The cells of the returned table are specified as an iterable of\n",
+      "        iterables. The **attributes are passed to the initializer of the\n",
+      "        Table object (attributes cannot be set for the nested TableRow and\n",
+      "        TableEntry objects)\n",
+      "    \n",
+      "    underbrace(expr, underscript)\n",
+      "        Create an underbraced expression.\n",
+      "        \n",
+      "        The LaTeX equivalent is:\n",
+      "        \n",
+      "            \\underbrace{expr}_{underscript}\n",
+      "\n",
+      "FILE\n",
+      "    c:\\users\\sbrisard\\documents\\professionnels\\projets\\pymathml\\pymathml\\utils.py\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pymathml.utils\n",
+    "help(pymathml.utils)"
    ]
   }
  ],
