Define `CircledTimes` binary operation

--- a/docs/README.ipynb
+++ b/docs/README.ipynb
@@ -681,12 +681,13 @@
     "\n",
     "| PyMathML       | Operator |\n",
     "|----------------|----------|\n",
+    "| CircledTimes   | ⊗        |\n",
     "| Dot            | ⋅        |\n",
     "| Equals         | =        |\n",
     "| InvisibleTimes | ⁢         |\n",
     "| Minus          | -        |\n",
     "| Plus           | +        |\n",
-    "| Times          | ×        |\n"
+    "| Times          | ×        |"
    ]
   },
   {
@@ -802,6 +803,13 @@
    "outputs": [],
    "source": [
     "print(inspect.getdoc(CircledTimes))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that the `CircledTimes` binary operator is actually defined in the library."
    ]
   },
   {
